--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,14 @@ after_success:
   - docker push abdoultodocker/worker
   - docker push abdoultodocker/server
 
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-north-1"
+  app: "multi-docker"
+  env: "Multi-docker-env"
+  bucket_name: "elasticbeanstalk-eu-north-1-887661588490"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_ACCESS_SECRET"
